# FlowSoploCulc

./: .gitattributes  .gitignore  CMakeLists-qt5.txt  CMakeLists.txt  Doxyfile  FlowSoploCulc.pro  INSTALL  INSTALL.docx  README.md  todo
src/: EnterBox.ui  Flow.cpp  Flow.h  Flow.ui  main.cpp
